2016-06-22  Release 1.34.2

  * Bug fix: Remove extraneous "<<<<<<<<" from the help information of the quality report.


2016-06-22  Release 1.34.1

  * Bug fix: Don't crash when generating the list of metric sources.


2016-06-22  Release 1.34.0

  * Show a list of metric sources in the help information of the quality report.


2016-06-22  Release 1.33.2

  * Bug fix: Don't crash when adding OWASP as requirement without providing a OWASP dependency checker metric source.


2016-06-22  Release 1.33.1

  * Bug fix: Don't crash.


2016-06-21  Release 1.33.0

  * Include the OWASP dependency checker metric in the report for products that have OWASP as requirement:
    Product(..., requirements=[requirement.OWASP]). This will add the metric metric.OWASPDependencies to the
    section of the product.


2016-06-21  Release 1.32.1

  * Bug fix: Show OWASP dependency metric as missing when the OWASP dependency report is not available.


2016-06-21  Release 1.32.0

  * Setting technical debt metric targets via the technical_debt_target parameter is no longer supported.
    Use the metric_options parameter introduced in release 1.31.0.


2016-06-20  Release 1.31.2

  * Bug fix: Don't crash on httplib.BadStatusLine when opening a URL.


2016-06-19  Release 1.31.1

  * Bug fix: Don't ignore a subject's comment when a metric has a technical debt comment.


2016-06-19  Release 1.31.0

  * Overriding metric target and low targets via the targets and low_targets parameters is no longer supported.
    Use the metric_options parameter introduced in release 1.30.0.
  * Allow for accepting technical debt metric targets via the metric options, e.g.
    Product(..., metric_options={metric.MajorViolations: dict(debt_target=TechnicalDebtTarget(50))})


2016-06-18  Release 1.30.0

  * Allow for overriding metric targets and low targets via the metric options, e.g.
    Product(..., metric_options={metric.MajorViolations: dict(target=10, low_target=5)})


2016-06-18  Release 1.29.0
